--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+	--max-width: 1200px;
+}
+
 button,
 input,
 label {
@@ -18,6 +22,12 @@ label {
 
 .gap-4 {
 	gap: 1rem;
+}
+
+.App > div {
+	width: 100%;
+	max-width: var(--max-width);
+	margin: 0 auto;
 }
 
 .Input textarea {
