--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
 :root {
-	--max-width: 1200px;
+	--max-width: min(90vw, 1200px);
 }
 
 button,
 input,
 label {
 	cursor: pointer;
+}
+
+h1 {
+	margin-top: 0.33em;
+}
+
+select {
+	background-color: #ffffff;
+	border-radius: 0;
 }
 
 .flex {
@@ -16,26 +25,58 @@ label {
 	flex-direction: column;
 }
 
+.flex-col-reverse {
+	flex-direction: column-reverse;
+}
+
 .flex-1 {
 	flex: 1 1 0%;
+}
+
+.flex-auto {
+	flex: 1 1 auto;
 }
 
 .gap-4 {
 	gap: 1rem;
 }
 
+.items-center {
+	align-items: center;
+}
+
+.rounded-none {
+	border-radius: 0;
+}
+
 .text-center {
 	text-align: center;
+}
+
+.w-full {
+	width: 100%;
+}
+
+.p-2 {
+	padding: 0.5rem;
+}
+
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.overflow-auto {
+	overflow: auto;
 }
 
 .Input,
 .Buttons {
 	width: 100%;
 	max-width: var(--max-width);
-	margin: 0 auto;
 }
 
-.Input textarea {
+.Text textarea {
 	padding: min(0.5rem, 5%);
 }
 
@@ -63,5 +104,16 @@ label {
 @media (min-width: 350px) {
 	.sm\:flex-row {
 		flex-direction: row;
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:flex-row {
+		flex-direction: row;
+	}
+
+	.md\:mx-auto {
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
